[gd_scene load_steps=11 format=3 uid="uid://dp67ctibumiwu"]

[ext_resource type="Texture2D" uid="uid://bmd6uynbas0w6" path="res://assets/UI/Buttons/Button_Blue_3Slides.png" id="1_6tr21"]
[ext_resource type="Script" path="res://scene/menu/component/menu_bottun/MenuButton.gd" id="1_yshwj"]
[ext_resource type="Texture2D" uid="uid://o2pbkjo71add" path="res://assets/UI/Buttons/Button_Blue_3Slides_Pressed.png" id="2_yfat8"]
[ext_resource type="Texture2D" uid="uid://bfo7xy8pi57dh" path="res://assets/UI/Buttons/Button_Hover_3Slides.png" id="3_w0utp"]
[ext_resource type="FontFile" uid="uid://b84bco3bqofnq" path="res://assets/Fonts/jupiterc.ttf" id="5_wdiap"]
[ext_resource type="Texture2D" uid="uid://b5kppvkwpucny" path="res://assets/UI/Pointers/03.png" id="6_hukcb"]
[ext_resource type="Texture2D" uid="uid://dysfv1w6u68tr" path="res://assets/UI/Pointers/04.png" id="7_toq7v"]
[ext_resource type="Texture2D" uid="uid://cj8dxpohswdvc" path="res://assets/UI/Pointers/05.png" id="8_4xrbt"]
[ext_resource type="Texture2D" uid="uid://c6vmr7b483jae" path="res://assets/UI/Pointers/06.png" id="9_7hysh"]

[sub_resource type="LabelSettings" id="LabelSettings_ja8bf"]
font = ExtResource("5_wdiap")
font_size = 25
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[node name="MenuButton" type="TextureButton"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_6tr21")
texture_pressed = ExtResource("2_yfat8")
texture_hover = ExtResource("3_w0utp")
script = ExtResource("1_yshwj")
metadata/LabelName = "test"

[node name="FocusImage" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="03" type="Sprite2D" parent="FocusImage"]
z_index = -1
position = Vector2(-88, -28)
texture = ExtResource("6_hukcb")

[node name="04" type="Sprite2D" parent="FocusImage"]
z_index = -1
position = Vector2(88, -28)
texture = ExtResource("7_toq7v")

[node name="05" type="Sprite2D" parent="FocusImage"]
position = Vector2(-88, 20)
texture = ExtResource("8_4xrbt")

[node name="06" type="Sprite2D" parent="FocusImage"]
position = Vector2(88, 20)
texture = ExtResource("9_7hysh")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -24.0
offset_right = 29.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
text = "empty"
label_settings = SubResource("LabelSettings_ja8bf")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
